<resources>
    <string name="app_name">SpaceMiracle</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="search_in_wiki">Поиск в Википедии</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="day_before">Позавчера</string>
    <string name="second">Второй</string>
    <string name="main">Главная</string>
    <string name="third">Третий</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Настройки</string>
    <string name="second_activity">Вторая активити</string>
    <string name="fullname_camera">Полное назнание камеры</string>
    <string name="sol">Сол</string>
    <string name="earth_date">Дата на земле</string>
    <string name="third_activity">Третья активити</string>
    <string name="constraint_layout">Constraint layout</string>
    <string name="some_label">some label</string>
    <string name="coordinator_test_text">akjsdlfk alskdhfkajshd adf asdljkfhalskjdhf asjhdfljkashdfl kasdjf alsjkhdflkjashdfwqhefjkasdhfkljashdfljas ldkfjhas lkjdfh aslkjdhflkjaflhsdfasdflkasdflasld fjals;kjdflkasjdflkjas dlfjkas ldfkjaslkjdf askldf lkasjdf;kajsdfl;kjas;lkdfjas;kldjf;askjdf;lkasjdfoiqwethjkgndsfgljksebglkjsdhf gl</string>
    <string name="second_label">second label</string>
    <string name="title_activity_swipe_behavior">SwipeBehaviorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label1">Label1</string>
    <string name="swipe_behavior">Swipe behavior</string>
    <string name="coordinator_layout">Coordinator layout</string>
    <string name="motion_layout">Motion layout</string>
    <string name="animation_activity">Animation activity</string>
    <string name="change_image_transform">Change Image Transform</string>
    <string name="animation_path_transform">Animation path</string>
    <string name="path">Path</string>
    <string name="mixing_activity">Анимация перемешивания</string>
    <string name="shuffle">shuffle</string>
    <string name="animation_object">Animation object</string>
    <string name="state_list_animator">StateListAnimator</string>
    <string name="constraint_set">ConstraintSet</string>
    <string name="animated_vector_drawable">Animated Vector Drawable</string>

    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>
    <string name="mars_description">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
</resources>