<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_second_activity"
        android:title="@string/second_activity"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_third_activity"
        android:title="@string/constraint_layout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_coordinator_activity"
        android:title="@string/coordinator_layout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_swipe_activity"
        android:title="@string/swipe_behavior"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_motion_activity"
        android:title="@string/motion_layout"
        app:showAsAction="never" />
</menu>