<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/menu_main"
    >
    <fragment
        android:id="@+id/menu_main"
        android:name="com.example.spacemiracle.PictureOfTheDayFragment"
        android:label="@string/main"
        tools:layout="@layout/picture_of_the_day_fragment" />
    <fragment
        android:id="@+id/menu_second"
        android:name="com.example.spacemiracle.SecondFragment"
        android:label="@string/second"
        tools:layout="@layout/second_fragment" />
    <fragment
        android:id="@+id/menu_third"
        android:name="com.example.spacemiracle.ThirdFragment"
        android:label="@string/third"
        tools:layout="@layout/fragment_third" />
</navigation>