<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentContainer"
    tools:context=".PictureOfTheDayFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilWiki"
                    android:visibility="invisible"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/title_margin_bottom"
                    android:hint="@string/search_in_wiki"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/ic_wikipedia_s_w"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etWiki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageWiki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="17dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_wikipedia_s_w" />
            </FrameLayout>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:selectionRequired="true"
                app:checkedChip="@id/chipToday"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDayBefore"
                    style="@style/ChipChoise"
                    android:text="@string/day_before" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipYesterday"
                    style="@style/ChipChoise"
                    android:text="@string/yesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    style="@style/ChipChoise"
                    android:checked="true"
                    android:text="@string/today" />


            </com.google.android.material.chip.ChipGroup>


            <com.example.spacemiracle.EquilateralImageView
                android:id="@+id/ivPhotoOfDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:src="@drawable/ic_no_photography" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_padding">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/title_margin_bottom"
                    android:fontFamily="@font/audiowide"
                    android:textSize="@dimen/title_text_size"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono"
                    tools:text="@string/description" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/loadingLayout"
        layout="@layout/loading_layout"
        android:visibility="gone" />
</FrameLayout>
